fix  z-index to help-container

--- a/app/public/app/nlp_search/nlp-search.styles.sass
+++ b/app/public/app/nlp_search/nlp-search.styles.sass
@@ -4,7 +4,7 @@
     border-top: 1px dotted #404040
     border-bottom: 1px dotted #404040
     position: relative
-    z-index: 9999
+    z-index: 9
     font-size: 14px
     background-color: #fff
 
